added typeScript to simple calculation

--- a/TS_Basics/1_/index.html
+++ b/TS_Basics/1_/index.html
@@ -6,10 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Understanding TypeScript</title>
-    <script src="index.js" defer></script>
+    <script src="test.js" defer></script>
 </head>
 
 <body>
+    <!-- //although type is defined as number, JS takes the value as string this
+    //unusal behaviour must be resolved with TS. -->
     <input type="number" id="num1" placeholder="Number 1" />
     <input type="number" id="num2" placeholder="Number 2" />
     <button>Add!</button>
