--- a/TS_Basics/2_/index.html
+++ b/TS_Basics/2_/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Understanding TypeScript home</title>
-    <script src="3_union.js" defer></script>
+    <script src="6_never.js" defer></script>
 </head>
 
 <body>
