--- a/TS_Basics/3_/index.html
+++ b/TS_Basics/3_/index.html
@@ -1,14 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="app.js"></script>
     <script src="34_watch.js"></script>
     <script src="35_analytics.js"></script>
     <title>Config</title>
+
 </head>
+
 <body>
-    
+    <button>
+        Click Here!
+    </button>
 </body>
+
 </html>
